--- a/mainofc.css
+++ b/mainofc.css
@@ -54,6 +54,18 @@ body {
     background-color: rgb(161, 145, 95);
 }
 
+#sobrerestaurante-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#eventos-img {
+    width: 100%;
+    height: 50%;
+    object-fit: cover;
+}
+
 .lista-texto {
     font-size: 18px;
 }
